add create and list products docs to swagger
